# backend_ninja

./: README.md  get_request_example.py  pyproject.toml  render.yaml
backend_project/: db.sqlite3
backend_project/backend_app/: models.py  serializers.py  urls.py  views.py
backend_project/backend_app/migrations/: 0001_initial.py  0002_basic_info_github_url_alter_basic_info_name.py  0003_alter_basic_info_github_url.py  0004_alter_basic_info_endpoint_url_and_more.py
backend_project/backend_project/: settings.py  urls.py
